<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">AndroidTicTacToe</string>
    <string name="first_human">You go first.</string>
    <string name="first_computer">Android go first.</string>
    <string name="turn_human">Your turn.</string>
    <string name="turn_computer">Android\'s turn.</string>
    <string name="result_tie">It\'s a tie.</string>
    <string name="result_human_wins">You won!</string>
    <string name="result_computer_wins">Android won!</string>
    <string name="new_game">New Game</string>
    <string name="difficulty_choose">Choose a difficulty level:</string>
    <string name="reset_scores">Reset</string>
    <string name="difficulty_easy">Easy</string>
    <string name="difficulty_medium">Medium</string>
    <string name="difficulty_hard">Hard</string>
    <string name="reset_question">Are you sure you want to reset?</string>
    <string name="quit_question">Are you sure you want to quit?</string>
    <string name="yes">YES</string>
    <string name="no">NO</string>
    <string name="ok">OK</string>
    <string name="sound">Sound</string>
    <string name="sound_summary">Turn the sound on or off</string>
    <string name="victory_message">Victory message</string>
    <string name="difficulty_level">Difficulty level</string>
    <string name="setting">Setting</string>
    <string name="quit">Quit</string>
    <string name="about">About</string>
    <string name="order_alternates">Alternates</string>
    <string name="order_last_loser">Last loser</string>
    <string name="order_loser_first">Loser first, alternate on tie</string>
    <string name="order_random">Random</string>
    <string name="order_always_human">Always human</string>
    <string name="order_always_android">Always android</string>
    <string name="order">Who goes first</string>

</resources>
