<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/new_game"
        android:title="@string/new_game"
        android:showAsAction="ifRoom"
        android:icon="@drawable/ic_action_new_game"/>

    <item
        android:id="@+id/setting"
        android:title="@string/setting"
        android:showAsAction="ifRoom"
        android:icon="@drawable/ic_action_setting"/>

    <item
        android:id="@+id/reset"
        android:title="@string/reset_scores"
        android:showAsAction="ifRoom"
        android:icon="@drawable/ic_action_reset"/>

    <item
        android:id="@+id/quit"
        android:title="@string/quit"
        android:showAsAction="ifRoom"
        android:icon="@drawable/ic_action_quit_game"/>

    <item
        android:id="@+id/about"
        android:title="@string/about"
        android:showAsAction="ifRoom"
        android:icon="@drawable/ic_action_about_game_icon"/>

</menu>
